--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -96,7 +96,7 @@ plugins=(
 	aliases
 	{{- if eq .chezmoi.osRelease.id "opensuse-tumbleweed" }} 
 	suse
-	{{- else if eq .chezmoi.osRelease.id "opensuse-tumbleweed" }} 
+	{{- else if eq .chezmoi.osRelease.id "manjaro" }} 
 	archlinux
 	{{- end }}
 )
