add bw auth command

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -134,6 +134,8 @@ alias venv='python -m venv venv && source venv/bin/activate'
 alias ls='exa'
 alias awx='awsctx'
 alias cm='chezmoi'
+alias bw_auth='export BW_SESSION=$(bw unlock --passwordfile ~/.bw_auth --raw)'
+alias b='byobu'
 {{- if eq .chezmoi.osRelease.id "opensuse-tumbleweed" }} 
 alias qdbus='qdbus-qt5'
 alias pyenv='CC=clang pyenv'
