--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -137,6 +137,7 @@ alias cm='chezmoi'
 alias bw_auth='export BW_SESSION=$(bw unlock --passwordfile ~/.bw_auth --raw)'
 alias b='byobu'
 alias hau='ssh pi "cd config && git pull"'
+alias rs='ssh proxmox "zpool status raid"'
 {{- if eq .chezmoi.osRelease.id "opensuse-tumbleweed" }} 
 alias qdbus='qdbus-qt5'
 alias pyenv='CC=clang pyenv'
