small updates to commands

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -136,7 +136,7 @@ alias awx='awsctx'
 alias cm='chezmoi'
 alias bw_auth='export BW_SESSION=$(bw unlock --passwordfile ~/.bw_auth --raw)'
 alias b='byobu'
-alias hau='ssh pi "cd config && git pull"'
+alias hau='echo "Updating home assistant repo";ssh pi "cd config && git pull"'
 alias rs='ssh proxmox "zpool status raid"'
 {{- if eq .chezmoi.osRelease.id "opensuse-tumbleweed" }} 
 alias qdbus='qdbus-qt5'
