add kubectl plugin to oh my zsh

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -94,6 +94,7 @@ plugins=(
 	terraform
 	fzf
 	aliases
+	kubectl
 	{{- if eq .chezmoi.osRelease.id "opensuse-tumbleweed" }} 
 	suse
 	{{- else if eq .chezmoi.osRelease.id "manjaro" }} 
