--- a/dot_config/i3/config.tmpl
+++ b/dot_config/i3/config.tmpl
@@ -203,7 +203,12 @@ for_window [class="Kmix"] floating enable; border none
 for_window [class="Klipper"] floating enable; border none
 for_window [class="Plasmoidviewer"] floating enable; border none
 for_window [class="(?i)*nextcloud*"] floating disable
+{{ if eq .chezmoi.hostname "euler" }}
+for_window [class="plasmashell" window_type="notification"] border none, move right 60ppt, move down 10ppt
+{{- end }}
+{{ if ne .chezmoi.hostname "euler" }}
 for_window [class="plasmashell" window_type="notification"] border none, move right 90ppt, move down 5ppt
+{{- end }}
 no_focus [class="plasmashell" window_type="notification"]
 for_window [title="Desktop — Plasma"] kill; floating enable; border none
 
