--- a/dot_config/i3/config.tmpl
+++ b/dot_config/i3/config.tmpl
@@ -182,11 +182,11 @@ bindsym $mod+r mode "default"
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#        status_command i3status
-#}
+{{ if eq .chezmoi.hostname "euler" }}
+# move workspace to other screen commands
+bindsym $mod+x move workspace to output DisplayPort-2
+bindsym $mod+Shift+x move workspace to output HDMI-A-0
+{{- end }}
 
 # Plasma compatibility improvements
 for_window [window_role="pop-up"] floating enable
