--- a/dot_config/i3/config.tmpl
+++ b/dot_config/i3/config.tmpl
@@ -204,8 +204,7 @@ for_window [class="Klipper"] floating enable; border none
 for_window [class="Plasmoidviewer"] floating enable; border none
 for_window [class="(?i)*nextcloud*"] floating disable
 {{ if eq .chezmoi.hostname "euler" }}
-for_window [class="plasmashell" window_type="notification"] border none
-#, move left 10ppt, move down 20ppt
+for_window [class="plasmashell" window_type="notification"] border none, move to output HDMI-A-0, move right 30 ppt, move up 45 ppt
 {{- end }}
 {{ if ne .chezmoi.hostname "euler" }}
 for_window [class="plasmashell" window_type="notification"] border none, move right 90ppt, move down 5ppt
