add lofi alias, add some more hosts

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -151,6 +151,7 @@ alias op='cd $HOME/$CCP_BASE/`/bin/ls $HOME/$CCP_BASE | fzf`'
 alias kx='kubectx'
 alias kns='kubens'
 alias xc='xclip -selection c'
+alias lofi='mpv https://www.youtube.com/watch\?v\=5qap5aO4i9A --no-video'
 {{- if eq .chezmoi.osRelease.id "opensuse-tumbleweed" }} 
 alias qdbus='qdbus-qt5'
 alias pyenv='CC=clang pyenv'
