--- a/dot_gitconfig-essent.tmpl
+++ b/dot_gitconfig-essent.tmpl
@@ -1,7 +1,4 @@
 [user]
   name  = @{{ (bitwarden "item" "Essent Gitlab").login.username }}
   email = {{ (bitwarden "item" "beeline").login.username }}
-  signingkey = BD0E9BAF7DF53193
-
-[commit]
-  gpgsign = true
+  signingKey = BD0E9BAF7DF53193
