--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,10 +1,10 @@
 [user]
 	email = {{ .email }}
 	name = Tim Voets
-	signingkey = 469324DCA244662E
+	signingKey = 469324DCA244662E
 
 [commit]
-  gpgsign = true
+  gpgSign = true
 
 [includeIf "hasconfig:remote.*.url:{{ (bitwardenFields "item" "Essent Gitlab").git_url.value }}:*/**"]
 	path = ~/.gitconfig-essent
