new aliases and logout fix
Signed-off-by: Tim Voets <voets.tim@gmail.com>

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -152,6 +152,10 @@ alias kx='kubectx'
 alias kns='kubens'
 alias xc='xclip -selection c'
 alias lofi='mpv https://www.youtube.com/watch\?v\=5qap5aO4i9A --no-video'
+alias tmux='TERM=ansi tmux'
+alias om='glab mr view -w'
+export AWS_REGION=eu-central-1
+export AWS_DEFAULT_REGION=eu-central-1
 {{- if eq .chezmoi.osRelease.id "opensuse-tumbleweed" }} 
 alias qdbus='qdbus-qt5'
 alias pyenv='CC=clang pyenv'
