--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -7,7 +7,7 @@ fi
 
 # If you come from bash you might have to change your $PATH.
 # export PATH=$HOME/bin:/usr/local/bin:$PATH
-export PATH=$PATH:$HOME/.local/bin:$HOME/go/bin
+export PATH=$PATH:$HOME/.local/bin:$HOME/go/bin:$HOME/.local/share/JetBrains/Toolbox/scripts
 
 # Path to your oh-my-zsh installation.
 export ZSH="$HOME/.oh-my-zsh"
@@ -134,6 +134,8 @@ export FZF_DEFAULT_COMMAND='fd --type f --hidden --follow --exclude .git'
 export GITLAB_HOST='{{ (bitwardenFields "item" "Essent Gitlab").url.value }}'
 export GITLAB_USER='{{ (bitwarden "item" "Essent Gitlab").login.username }}'
 export GITLAB_TOKEN='{{ (bitwardenFields "item" "Essent Gitlab").pat.value }}'
+export GITEA_USER='{{ (bitwarden "item" "gitea").login.username }}'
+export GITEA_TOKEN='{{ (bitwarden "item" "gitea").login.password }}'
 
 alias pep='source venv/bin/activate'
 alias venv='python -m venv venv && source venv/bin/activate'
