--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -128,6 +128,7 @@ export FZF_DEFAULT_COMMAND='fd --type f --hidden --follow --exclude .git'
 export GITLAB_HOST='{{ (bitwardenFields "item" "Essent Gitlab").url.value }}'
 export GITLAB_USER='{{ (bitwarden "item" "Essent Gitlab").login.username }}'
 export GITLAB_TOKEN='{{ (bitwardenFields "item" "Essent Gitlab").pat.value }}'
+export GITLAB_ACCESS_TOKEN='{{ (bitwardenFields "item" "Essent Gitlab").pat.value }}'
 export GITEA_USER='{{ (bitwarden "item" "gitea").login.username }}'
 export GITEA_TOKEN='{{ (bitwarden "item" "gitea").login.password }}'
 
@@ -148,7 +149,6 @@ alias kx='kubectx'
 alias kns='kubens'
 alias xc='xclip -selection c'
 alias lofi='mpv https://www.youtube.com/watch\?v\=5qap5aO4i9A --no-video'
-alias tmux='TERM=ansi tmux'
 alias om='glab mr view -w'
 export AWS_REGION=eu-central-1
 export AWS_DEFAULT_REGION=eu-central-1
