--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,5 +1,5 @@
 # If you come from bash you might have to change your $PATH.
-{{- if eq .chezmoi.os "linux" }} 
+{{- if eq .chezmoi.os "linux" }}
 export PATH=$PATH:$HOME/.local/bin:$HOME/go/bin:$HOME/.local/share/JetBrains/Toolbox/scripts
 {{- end }}
 
@@ -7,6 +7,10 @@ export PATH=$PATH:$HOME/.local/bin:$HOME/go/bin:$HOME/.local/share/JetBrains/Too
 export ZSH="$HOME/.oh-my-zsh"
 
 # pyenv
+{{- if eq .chezmoi.os "darwin" }}
+export PYENV_ROOT="$HOME/.pyenv"
+export PATH="$PYENV_ROOT/shims:$PATH"
+{{- end }}
 if command -v pyenv >/dev/null; then eval "$(pyenv init -)"; fi
 
 plugins=(
@@ -23,8 +27,11 @@ plugins=(
 	fzf
 	aliases
 	kubectl
-  {{- if eq .chezmoi.os "linux" }} 
+	direnv
+  {{- if eq .chezmoi.os "linux" }}
 	archlinux
+  {{- else if eq .chezmoi.os "darwin" }}
+  macos
 	{{- end }}
 )
 DISABLE_AUTO_UPDATE="true"
